<resources>
    <string name="app_name">cloneinstagram</string>
    <string name="facebook_app_id">401985854437593</string>
    <string name="fb_login_protocol_scheme">fb401985854437593</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">0lY6xdMc8l3Bgkdep8DvfPxe4</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">2Uov8wp8sQWccy1oRRes7Q3VgWfsTE1tokYHblse9TTaF0BW1b</string>

    <!-- Sign In -->
    <string name="id">전화번호, 이메일 주소 또는 사용자 이름</string>
    <string name="password">비밀번호</string>
    <string name="signin">로그인</string>
    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="msg">메시지</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">%1$s 님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_comment"> %1$s 님이 메세지를 남겼습니다.</string>
    <string name="alarm_follow">%1$s 님이 당신의 계정을 팔로워하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">게시</string>
    <string name="logo">로고</string>
    <string name="comment">댓글</string>
    <string name="comment_hint">댓글달기...</string>
    <string name="comment_text"> %1$s </string>
    <string name="comment_userId"> %1$s </string>


    <!-- Add Photo -->
    <string name="upload_image">공유</string>
    <string name="upload_content">새 게시물</string>
    <string name="hint_image_content">문구 입력...</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>


    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="likes">Likes %1$d</string>

</resources>