<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.AddPhotoActivity">

    <Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/upload_content"
            android:textSize="25dp"
            android:textColor="@color/black"/>
    </Toolbar>
    <LinearLayout
        android:id="@+id/toolbar_division"
        android:background="@color/colorDivision"
        android:layout_below="@id/my_toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText"
        android:layout_below="@+id/toolbar_division"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_gravity="top"
            android:id="@+id/addphoto_edit_explain"
            android:hint="@string/hint_image_content"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/addphoto_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar_division"
        android:layout_toRightOf="@+id/editText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <android.widget.Button
        android:id="@+id/addphoto_btn_upload"
        android:text="@string/upload_image"
        android:layout_below="@id/editText"
        android:theme="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>


</RelativeLayout>