<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_title" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/id"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext"
        app:layout_constraintStart_toStartOf="@+id/email_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext"
         />

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/colorEmailSignIn"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/signin"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext"
        app:layout_constraintStart_toStartOf="@+id/password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />


    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_signin_facebook"
        android:text="@string/signin_facebook"
        app:layout_constraintEnd_toEndOf="@+id/email_login_button"
        app:layout_constraintStart_toStartOf="@+id/email_login_button"
        app:layout_constraintTop_toBottomOf="@+id/email_login_button" />




</androidx.constraintlayout.widget.ConstraintLayout>